# online-store-project

./: .env_sample  .gitignore  README.md  catalog_data.json  data.json  groups.json  pyproject.toml
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: updatedata.py
catalog/migrations/: 0001_initial.py  0002_alter_category_options_category_discription_and_more.py  0003_product_manufactured_at.py  0004_remove_product_manufactured_at.py  0005_contacts.py  0006_alter_contacts_email_address.py  0007_product_in_stock.py  0008_feedback.py  0009_version.py  0010_alter_version_number.py  0011_alter_product_discription.py  0012_product_seller.py  0013_alter_product_options_and_more.py  0014_alter_product_options.py  0015_alter_product_options.py
catalog/templates/catalog/: base.html  contacts.html  feedback_form.html  home.html  product.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html
catalog/templatetags/: custom_tags.py
config/: settings.py  urls.py
materials/: admin.py  forms.py  models.py  urls.py  views.py
materials/migrations/: 0001_initial.py  0002_material_is_published_material_slug_and_more.py  0003_material_created_at_material_preview.py  0004_alter_material_created_at.py
materials/templates/materials/: material_confirm_delete.html  material_detail.html  (+2 more)
materials/templatetags/: custom_tag.py
static/css/: style.css
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_user_token.py
(+6 files in other folders)
